# HW_ABC_5

./: CMakeLists.txt  Pot.cpp  Pot.h  README.md  Savage.cpp  Savage.h  Tribe.cpp  main.cpp  rnd.h
